<resources>
    <string name="app_name">My alarmproject 1</string>
    <string name="txt_Hello">Hello</string>
    <string name="txt_sun_26_december_2021">Sun,26 December 2021</string>
    <string name="txt_set_your_reminder">Set Your Reminder</string>
    <string name="txt_set">Set</string>
    <string name="txt_your_alarm">Your Alarm</string>
    <string name="txt_one_time_alarm">One Time Alarm</string>
    <string name="txt_input_your_note">Input Your Note</string>
    <string name="txt_add_set_alarm">Add Set Alarm</string>
    <string name="txt_cansel_set_alarm">Cansel Set Alarm</string>
    <string name="txt_censel_set_alarm">Censel Set Alarm</string>
    <string name="txt_repeating_alarm">Repeating Alarm</string>
    <string name="txt_set_time">Set Time</string>
    <string name="txt_time">Time</string>
</resources>