<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".OneTimeAlarm">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_title_one_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        
        <TextView
            android:id="@+id/tv_set3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/txt_set"
            android:textColor="@color/Light"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_one_time_alarm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/txt_one_time_alarm"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_set3"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_one_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_margin="25dp"
        android:padding="20dp"
        android:background="@color/abu"
        android:id="@+id/view_content_one_time"
        app:layout_constraintTop_toBottomOf="@id/view_title_one_time">
        
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardBackgroundColor="@color/dark"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/card_date_one_time">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_set_date_one_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_once_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/rubik_regular"
                    android:text="Date"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.407" />

                <Button
                    android:id="@+id/btn_set_date_one_time"
                    android:layout_width="95dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="11sp"
                    android:text="Set Date"
                    android:fontFamily="@font/rubik_regular"
                    android:textAllCaps="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
        
        <androidx.cardview.widget.CardView
            android:id="@+id/card_time_one_time"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardBackgroundColor="@color/dark"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_date_one_time">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/view_set_time">

                <TextView
                    android:id="@+id/tv_once_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/txt_time"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.407" />

                <Button
                    android:id="@+id/btn_set_time_one_time"
                    android:layout_width="95dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="11sp"
                    android:text="@string/txt_set_time"
                    android:fontFamily="@font/rubik_regular"
                    android:textAllCaps="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_note_one_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/txt_one_time_alarm"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_time_one_time"/>

        <EditText
            android:id="@+id/et_note_one_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="#647AFF"
            android:fontFamily="@font/rubik_regular"
            android:hint="@string/txt_input_your_note"
            android:textColor="@color/dark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_note_one_time"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_set_one_time_alarm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_green"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/txt_add_set_alarm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_note_one_time" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_cansel_set_alarm"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/green"
            android:fontFamily="@font/rubik_medium"
            android:background="@drawable/rounded_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_set_one_time_alarm"/>






    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>