<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".room.repeatingAlarm">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_tittle_repeating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_set4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/Light"
            android:textSize="22sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_repeating_alarm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Repeating Alarm"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintTop_toBottomOf="@id/tv_set4"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_repeating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_content_repeating"
        app:layout_constraintTop_toBottomOf="@id/view_tittle_repeating"
        android:layout_width="match_parent"
        android:layout_height="301dp"
        android:layout_margin="25dp"
        android:padding="20dp"
        android:background="@color/abu">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_time_repeating"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardBackgroundColor="@color/dark"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_set_time_repeating"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_repeating_time"
                    android:layout_width="35dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/rubik_regular"
                    android:text="Time"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_set_time_repeating"
                    android:layout_width="95dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="11sp"
                    android:text="@string/txt_set_time"
                    android:fontFamily="@font/rubik_regular"
                    android:textAllCaps="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_note_repeating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/txt_one_time_alarm"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_time_repeating"/>

        <EditText
            android:id="@+id/et_note_repeating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#647AFF"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:hint="@string/txt_input_your_note"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_note_repeating"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_green"
            android:text="@string/txt_add_set_alarm"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/rubik_medium"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_note_repeating"
            android:id="@+id/btn_add_set_repeating_alarm"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_censel_set_alarm"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/green"
            android:fontFamily="@font/rubik_medium"
            android:background="@drawable/rounded_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add_set_repeating_alarm"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>












